Sources/NeonFieldOps/include/NeonFieldOps.h


void secp256k1_point_scalar_mul(const uint64_t *p, const uint64_t *scalar, uint64_t *r);
void secp256k1_point_add(const uint64_t *p, const uint64_t *q, uint64_t *r);
void secp256k1_point_to_affine(const uint64_t *p, uint64_t *ax, uint64_t *ay);
void secp256k1_pippenger_msm(const uint64_t *points, const uint32_t *scalars,
                              int n, uint64_t *result);
void keccak_f1600_neon(uint64_t state[25]);
void keccak256_hash_neon(const uint8_t *input, size_t len, uint8_t output[32]);
void keccak256_hash_pair_neon(const uint8_t a[32], const uint8_t b[32], uint8_t output[32]);
void keccak256_batch_hash_pairs_neon(const uint8_t *inputs, uint8_t *outputs, size_t n);
void blake3_hash_pair_neon(const uint8_t left[32], const uint8_t right[32],
                           uint8_t output[32]);
void blake3_hash_neon(const uint8_t *input, size_t len, uint8_t output[32]);
void blake3_batch_hash_pairs_neon(const uint8_t *inputs, uint8_t *outputs, size_t n);
void gkr_eq_poly(const uint64_t *point, int n, uint64_t *eq);
void gkr_accumulate_wiring(
    const int32_t *gates, int numGates,
    const uint64_t *eqVals, const uint64_t weight[4],
    int inSize,
    uint64_t *accum, int accumCapacity,
    int32_t *nonzeroIndices, int *numNonzero);
void gkr_mle_fold(uint64_t *v, int half, const uint64_t challenge[4]);
void gkr_sumcheck_round_x(
    const uint64_t *wiring, int numEntries,
    const uint64_t *vx, int vxSize,
    const uint64_t *vy, int vySize,
    int nIn, int halfSize,
    uint64_t s0[4], uint64_t s1[4], uint64_t s2[4]);
void gkr_sumcheck_round_y(
    const uint64_t *wiring, int numEntries,
    const uint64_t vxScalar[4],
    const uint64_t *vy, int vySize,
    int halfSize,
    uint64_t s0[4], uint64_t s1[4], uint64_t s2[4]);
int gkr_wiring_reduce(
    const uint64_t *wiring, int numEntries,
    const uint64_t challenge[4],
    int halfSize,
    uint64_t *outWiring);
void gkr_sumcheck_step(
    const uint64_t *wiring, int numEntries,
    const uint64_t *curVx, int vxSize,
    const uint64_t *curVy, int vySize,
    int round, int nIn, int currentTableSize,
    uint64_t s0[4], uint64_t s1[4], uint64_t s2[4]);
void bn254_sparse_matvec_mle(
    const int *rowPtr, const int *colIdx, const uint64_t *values,
    int rows, const uint64_t *z,
    const uint64_t *point, int numVars, int padM,
    uint64_t result[4]);
void secp256k1_fr_mul(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void secp256k1_fr_inverse(const uint64_t a[4], uint64_t r[4]);
void secp256k1_fr_batch_inverse(const uint64_t *a, int n, uint64_t *out);
int secp256k1_ecdsa_batch_prepare(
    const uint64_t *sigs, const uint64_t *pubkeys, const uint8_t *recov,
    int n, uint64_t *out_points, uint32_t *out_scalars);
void spartan_sparse_matvec(const uint64_t *entries, int numEntries,
                           const uint64_t *z, int zLen,
                           uint64_t *result, int numRows);
void spartan_sc1_round(uint64_t *eqC, uint64_t *azC, uint64_t *bzC, uint64_t *czC,
                       int halfSize,
                       uint64_t s0[4], uint64_t s1[4], uint64_t s2[4], uint64_t s3[4]);
void spartan_fold_array(uint64_t *arr, int halfSize, const uint64_t ri[4]);
void spartan_sc2_round(uint64_t *wC, uint64_t *zC, int halfSize,
                       uint64_t s0[4], uint64_t s1[4], uint64_t s2[4]);
void spartan_build_weight_vec(const uint64_t *entries, int numEntries,
                              const uint64_t *eqRx, int eqRxLen,
                              const uint64_t weight[4],
                              uint64_t *wVec, int paddedN);
void spartan_eq_poly(const uint64_t *point, int n, uint64_t *eq);
void spartan_mle_eval(const uint64_t *evals, int numVars,
                      const uint64_t *point, uint64_t result[4]);
void tensor_mat_vec_mul(const uint64_t *M, const uint64_t *vec,
                        int rows, int cols, uint64_t *result);
void tensor_inner_product_sumcheck(
    const uint64_t *evalsA, const uint64_t *evalsB,
    int numVars, const uint64_t *challenges,
    uint64_t *rounds, uint64_t *finalEval);
void tensor_eq_weighted_row(const uint64_t *M, const uint64_t *rowPoint,
                            int rows, int cols, uint64_t *result);
void poseidon2_merkle_tree_cpu(const uint64_t *leaves, int n, uint64_t *tree);
void ccs_sparse_matvec(uint64_t *result,
                       const int *rowPtr, const int *colIdx,
                       const uint64_t *values, const uint64_t *z,
                       int nRows);
void ccs_hadamard_accumulate(uint64_t *acc,
                             const uint64_t * const *matResultPtrs,
                             const int *nMatricesPerTerm,
                             const uint64_t *coefficients,
                             int nTerms, int maxDegree, int m);
void ccs_compute_term(uint64_t *result,
                      const uint64_t * const *matVecResults,
                      int nMatrices,
                      const uint64_t coeff[4],
                      int m);
void plonk_compute_z_accumulator(
    const uint64_t *aEvals, const uint64_t *bEvals, const uint64_t *cEvals,
    const uint64_t *sigma1, const uint64_t *sigma2, const uint64_t *sigma3,
    const uint64_t *domain,
    const uint64_t beta[4], const uint64_t gamma[4],
    const uint64_t k1[4], const uint64_t k2[4],
    int n, uint64_t *zEvals);
void grumpkin_point_add(const uint64_t p[12], const uint64_t q[12], uint64_t r[12]);
void grumpkin_point_double(const uint64_t p[12], uint64_t r[12]);
void grumpkin_scalar_mul(const uint64_t p[12], const uint64_t scalar[4], uint64_t r[12]);
void grumpkin_point_add_mixed(const uint64_t p[12], const uint64_t q_aff[8], uint64_t r[12]);
void grumpkin_pippenger_msm(const uint64_t *points, const uint32_t *scalars,
                             int n, uint64_t *result);
void poseidon2_permutation_cpu(const uint64_t state[12], uint64_t result[12]);
void poseidon2_hash_cpu(const uint64_t a[4], const uint64_t b[4], uint64_t out[4]);
void poseidon2_hash_batch_cpu(const uint64_t *input, int count, uint64_t *output);
void secp256k1_shamir_double_mul(const uint64_t *p1, const uint64_t *s1,
                                  const uint64_t *p2, const uint64_t *s2,
                                  uint64_t *r);
void babyjubjub_point_add(const uint64_t p[16], const uint64_t q[16], uint64_t r[16]);
void babyjubjub_point_double(const uint64_t p[16], uint64_t r[16]);
void babyjubjub_scalar_mul(const uint64_t p[16], const uint64_t scalar[4], uint64_t r[16]);
void ed25519_fp_mul(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void ed25519_fp_sqr(const uint64_t a[4], uint64_t r[4]);
void ed25519_fp_add(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void ed25519_fp_sub(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void ed25519_fp_neg(const uint64_t a[4], uint64_t r[4]);
void ed25519_fp_inverse(const uint64_t a[4], uint64_t r[4]);
void ed25519_scalar_mul(const uint64_t p[16], const uint64_t scalar[4], uint64_t r[16]);
void ed25519_point_add_c(const uint64_t p[16], const uint64_t q[16], uint64_t r[16]);
void ed25519_point_double_c(const uint64_t p[16], uint64_t r[16]);
void ed25519_point_to_affine(const uint64_t p[16], uint64_t aff[8]);
void ed25519_mont_to_direct(const uint64_t mont[4], uint64_t direct[4]);
void ed25519_direct_to_mont(const uint64_t direct[4], uint64_t mont[4]);
void ed25519_pippenger_msm(const uint64_t *points, const uint32_t *scalars,
                            int n, uint64_t *result);
void ed25519_fq_mul(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void ed25519_fq_add(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void ed25519_fq_sub(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void ed25519_fq_from_raw(const uint64_t raw[4], uint64_t mont[4]);
void ed25519_fq_to_raw(const uint64_t mont[4], uint64_t raw[4]);
void ed25519_fq_from_bytes64(const uint8_t bytes[64], uint64_t mont[4]);
void ed25519_fq_to_bytes(const uint64_t mont[4], uint8_t bytes[32]);
void ed25519_shamir_double_mul(const uint64_t G[16], const uint64_t s[4],
                                const uint64_t A[16], const uint64_t h[4],
                                uint64_t result[16]);
void ed25519_eddsa_sign_compute_r(const uint64_t gen[16], const uint64_t r_scalar[4],
                                   uint64_t r_point[16]);
void ed25519_eddsa_sign_compute_s(const uint64_t r_mont[4], const uint64_t k_mont[4],
                                   const uint64_t a_mont[4], uint64_t s_mont[4]);
int ed25519_eddsa_verify(const uint64_t gen[16], const uint64_t s_raw[4],
                          const uint64_t r_point[16], const uint64_t h_raw[4],
                          const uint64_t pub_key[16]);
void pallas_fp_mul(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void pallas_fp_sqr(const uint64_t a[4], uint64_t r[4]);
void pallas_fp_add(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void pallas_fp_sub(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void pallas_fp_neg(const uint64_t a[4], uint64_t r[4]);
void pallas_point_add(const uint64_t p[12], const uint64_t q[12], uint64_t r[12]);
void pallas_point_double(const uint64_t p[12], uint64_t r[12]);
void pallas_point_add_mixed(const uint64_t p[12], const uint64_t q_aff[8], uint64_t r[12]);
void pallas_scalar_mul(const uint64_t p[12], const uint64_t scalar[4], uint64_t r[12]);
void pallas_pippenger_msm(const uint64_t *points, const uint32_t *scalars,
                           int n, uint64_t *result);
void vesta_fp_mul(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void vesta_fp_sqr(const uint64_t a[4], uint64_t r[4]);
void vesta_fp_add(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void vesta_fp_sub(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void vesta_fp_neg(const uint64_t a[4], uint64_t r[4]);
void vesta_point_add(const uint64_t p[12], const uint64_t q[12], uint64_t r[12]);
void vesta_point_double(const uint64_t p[12], uint64_t r[12]);
void vesta_point_add_mixed(const uint64_t p[12], const uint64_t q_aff[8], uint64_t r[12]);
void vesta_scalar_mul(const uint64_t p[12], const uint64_t scalar[4], uint64_t r[12]);
void vesta_pippenger_msm(const uint64_t *points, const uint32_t *scalars,
                          int n, uint64_t *result);