bindings/rust/zkmetal-sys/src/lib.rs


extern "C" {
    pub fn gkr_eq_poly(point: *const u64, n: c_int, eq: *mut u64);
    pub fn gkr_accumulate_wiring(
        gates: *const i32, num_gates: c_int,
        eq_vals: *const u64, weight: *const u64, in_size: c_int,
        accum: *mut u64, accum_capacity: c_int,
        nonzero_indices: *mut i32, num_nonzero: *mut c_int,
    );
    pub fn gkr_mle_fold(v: *mut u64, half: c_int, challenge: *const u64);
    pub fn gkr_sumcheck_round_x(
        wiring: *const u64, num_entries: c_int,
        vx: *const u64, vx_size: c_int, vy: *const u64, vy_size: c_int,
        n_in: c_int, half_size: c_int,
        s0: *mut u64, s1: *mut u64, s2: *mut u64,
    );
    pub fn gkr_sumcheck_round_y(
        wiring: *const u64, num_entries: c_int, vx_scalar: *const u64,
        vy: *const u64, vy_size: c_int, half_size: c_int,
        s0: *mut u64, s1: *mut u64, s2: *mut u64,
    );
    pub fn gkr_wiring_reduce(wiring: *const u64, num_entries: c_int, challenge: *const u64, half_size: c_int, out_wiring: *mut u64) -> c_int;
    pub fn gkr_sumcheck_step(
        wiring: *const u64, num_entries: c_int,
        cur_vx: *const u64, vx_size: c_int, cur_vy: *const u64, vy_size: c_int,
        round: c_int, n_in: c_int, current_table_size: c_int,
        s0: *mut u64, s1: *mut u64, s2: *mut u64,
    );
}

// =============================================================================
// Spartan operations
// =============================================================================

extern "C" {
    pub fn spartan_sparse_matvec(entries: *const u64, num_entries: c_int, z: *const u64, z_len: c_int, result: *mut u64, num_rows: c_int);
    pub fn spartan_sc1_round(eq_c: *mut u64, az_c: *mut u64, bz_c: *mut u64, cz_c: *mut u64, half_size: c_int, s0: *mut u64, s1: *mut u64, s2: *mut u64, s3: *mut u64);
    pub fn spartan_fold_array(arr: *mut u64, half_size: c_int, ri: *const u64);
    pub fn spartan_sc2_round(w_c: *mut u64, z_c: *mut u64, half_size: c_int, s0: *mut u64, s1: *mut u64, s2: *mut u64);
    pub fn spartan_build_weight_vec(entries: *const u64, num_entries: c_int, eq_rx: *const u64, eq_rx_len: c_int, weight: *const u64, w_vec: *mut u64, padded_n: c_int);
    pub fn spartan_eq_poly(point: *const u64, n: c_int, eq: *mut u64);
    pub fn spartan_mle_eval(evals: *const u64, num_vars: c_int, point: *const u64, result: *mut u64);
}

// =============================================================================
// CCS (Customizable Constraint System)
// =============================================================================

extern "C" {
    pub fn ccs_sparse_matvec(result: *mut u64, row_ptr: *const c_int, col_idx: *const c_int, values: *const u64, z: *const u64, n_rows: c_int);
    pub fn ccs_hadamard_accumulate(
        acc: *mut u64, mat_result_ptrs: *const *const u64, n_matrices_per_term: *const c_int,
        coefficients: *const u64, n_terms: c_int, max_degree: c_int, m: c_int,
    );
    pub fn ccs_compute_term(result: *mut u64, mat_vec_results: *const *const u64, n_matrices: c_int, coeff: *const u64, m: c_int);
}

// =============================================================================
// Tensor proof compression
// =============================================================================

extern "C" {
    pub fn tensor_mat_vec_mul(matrix: *const u64, vec: *const u64, rows: c_int, cols: c_int, result: *mut u64);
    pub fn tensor_inner_product_sumcheck(evals_a: *const u64, evals_b: *const u64, num_vars: c_int, challenges: *const u64, rounds: *mut u64, final_eval: *mut u64);
    pub fn tensor_eq_weighted_row(matrix: *const u64, row_point: *const u64, rows: c_int, cols: c_int, result: *mut u64);
}

// =============================================================================
// Sparse matvec + MLE
// =============================================================================

extern "C" {
    pub fn bn254_sparse_matvec_mle(row_ptr: *const c_int, col_idx: *const c_int, values: *const u64, rows: c_int, z: *const u64, point: *const u64, num_vars: c_int, pad_m: c_int, result: *mut u64);
}

// =============================================================================
// Plonk permutation Z accumulator
// =============================================================================

extern "C" {
    pub fn plonk_compute_z_accumulator(
        a_evals: *const u64, b_evals: *const u64, c_evals: *const u64,
        sigma1: *const u64, sigma2: *const u64, sigma3: *const u64,
        domain: *const u64, beta: *const u64, gamma: *const u64,
        k1: *const u64, k2: *const u64, n: c_int, z_evals: *mut u64,
    );
}

// =============================================================================
// Hashing: Keccak-256, Blake3
// =============================================================================

extern "C" {
    pub fn keccak_f1600_neon(state: *mut u64);
    pub fn keccak256_hash_neon(input: *const u8, len: usize, output: *mut u8);
    pub fn keccak256_hash_pair_neon(a: *const u8, b: *const u8, output: *mut u8);
    pub fn keccak256_batch_hash_pairs_neon(inputs: *const u8, outputs: *mut u8, n: usize);
    pub fn blake3_hash_neon(input: *const u8, len: usize, output: *mut u8);
    pub fn blake3_hash_pair_neon(left: *const u8, right: *const u8, output: *mut u8);
    pub fn blake3_batch_hash_pairs_neon(inputs: *const u8, outputs: *mut u8, n: usize);
}

// =============================================================================
// Poseidon2 (BN254 Fr, CPU)
// =============================================================================

extern "C" {
    pub fn poseidon2_permutation_cpu(state: *const u64, result: *mut u64);
    pub fn poseidon2_hash_cpu(a: *const u64, b: *const u64, out: *mut u64);
    pub fn poseidon2_hash_batch_cpu(input: *const u64, count: c_int, output: *mut u64);
    pub fn poseidon2_merkle_tree_cpu(leaves: *const u64, n: c_int, tree: *mut u64);
}

// =============================================================================
// secp256k1 curve operations
// =============================================================================

extern "C" {
    pub fn secp256k1_point_scalar_mul(p: *const u64, scalar: *const u64, r: *mut u64);
    pub fn secp256k1_point_add(p: *const u64, q: *const u64, r: *mut u64);
    pub fn secp256k1_point_to_affine(p: *const u64, ax: *mut u64, ay: *mut u64);
    pub fn secp256k1_pippenger_msm(points: *const u64, scalars: *const u32, n: c_int, result: *mut u64);
    pub fn secp256k1_fr_mul(a: *const u64, b: *const u64, r: *mut u64);
    pub fn secp256k1_fr_inverse(a: *const u64, r: *mut u64);
    pub fn secp256k1_fr_batch_inverse(a: *const u64, n: c_int, out: *mut u64);
    pub fn secp256k1_shamir_double_mul(p1: *const u64, s1: *const u64, p2: *const u64, s2: *const u64, r: *mut u64);
    pub fn secp256k1_ecdsa_batch_prepare(sigs: *const u64, pubkeys: *const u64, recov: *const u8, n: c_int, out_points: *mut u64, out_scalars: *mut u32) -> c_int;
}

// =============================================================================
// Grumpkin curve (y^2 = x^3 - 17 over BN254 Fr)
// =============================================================================

extern "C" {
    pub fn grumpkin_point_add(p: *const u64, q: *const u64, r: *mut u64);
    pub fn grumpkin_point_double(p: *const u64, r: *mut u64);
    pub fn grumpkin_scalar_mul(p: *const u64, scalar: *const u64, r: *mut u64);
    pub fn grumpkin_point_add_mixed(p: *const u64, q_aff: *const u64, r: *mut u64);
    pub fn grumpkin_pippenger_msm(points: *const u64, scalars: *const u32, n: c_int, result: *mut u64);
}

// =============================================================================
// Ed25519
// =============================================================================

extern "C" {
    pub fn ed25519_fp_mul(a: *const u64, b: *const u64, r: *mut u64);
    pub fn ed25519_fp_sqr(a: *const u64, r: *mut u64);
    pub fn ed25519_fp_add(a: *const u64, b: *const u64, r: *mut u64);
    pub fn ed25519_fp_sub(a: *const u64, b: *const u64, r: *mut u64);
    pub fn ed25519_fp_neg(a: *const u64, r: *mut u64);
    pub fn ed25519_fp_inverse(a: *const u64, r: *mut u64);
    pub fn ed25519_scalar_mul(p: *const u64, scalar: *const u64, r: *mut u64);
    pub fn ed25519_point_add_c(p: *const u64, q: *const u64, r: *mut u64);
    pub fn ed25519_point_double_c(p: *const u64, r: *mut u64);
    pub fn ed25519_point_to_affine(p: *const u64, aff: *mut u64);
    pub fn ed25519_mont_to_direct(mont: *const u64, direct: *mut u64);
    pub fn ed25519_direct_to_mont(direct: *const u64, mont: *mut u64);
    pub fn ed25519_pippenger_msm(points: *const u64, scalars: *const u32, n: c_int, result: *mut u64);
    pub fn ed25519_fq_mul(a: *const u64, b: *const u64, r: *mut u64);
    pub fn ed25519_fq_add(a: *const u64, b: *const u64, r: *mut u64);
    pub fn ed25519_fq_sub(a: *const u64, b: *const u64, r: *mut u64);
    pub fn ed25519_fq_from_raw(raw: *const u64, mont: *mut u64);
    pub fn ed25519_fq_to_raw(mont: *const u64, raw: *mut u64);
    pub fn ed25519_fq_from_bytes64(bytes: *const u8, mont: *mut u64);
    pub fn ed25519_fq_to_bytes(mont: *const u64, bytes: *mut u8);
    pub fn ed25519_shamir_double_mul(g: *const u64, s: *const u64, a: *const u64, h: *const u64, result: *mut u64);
    pub fn ed25519_eddsa_sign_compute_r(gen: *const u64, r_scalar: *const u64, r_point: *mut u64);
    pub fn ed25519_eddsa_sign_compute_s(r_mont: *const u64, k_mont: *const u64, a_mont: *const u64, s_mont: *mut u64);
    pub fn ed25519_eddsa_verify(gen: *const u64, s_raw: *const u64, r_point: *const u64, h_raw: *const u64, pub_key: *const u64) -> c_int;
}

// =============================================================================
// BabyJubjub twisted Edwards curve (over BN254 Fr)
// =============================================================================

extern "C" {
    pub fn babyjubjub_point_add(p: *const u64, q: *const u64, r: *mut u64);
    pub fn babyjubjub_point_double(p: *const u64, r: *mut u64);
    pub fn babyjubjub_scalar_mul(p: *const u64, scalar: *const u64, r: *mut u64);
}

// =============================================================================
// Pallas curve (y^2 = x^3 + 5)
// =============================================================================

extern "C" {
    pub fn pallas_fp_mul(a: *const u64, b: *const u64, r: *mut u64);
    pub fn pallas_fp_sqr(a: *const u64, r: *mut u64);
    pub fn pallas_fp_add(a: *const u64, b: *const u64, r: *mut u64);
    pub fn pallas_fp_sub(a: *const u64, b: *const u64, r: *mut u64);
    pub fn pallas_fp_neg(a: *const u64, r: *mut u64);
    pub fn pallas_point_add(p: *const u64, q: *const u64, r: *mut u64);
    pub fn pallas_point_double(p: *const u64, r: *mut u64);
    pub fn pallas_point_add_mixed(p: *const u64, q_aff: *const u64, r: *mut u64);
    pub fn pallas_scalar_mul(p: *const u64, scalar: *const u64, r: *mut u64);
    pub fn pallas_pippenger_msm(points: *const u64, scalars: *const u32, n: c_int, result: *mut u64);
}

// =============================================================================
// Vesta curve (y^2 = x^3 + 5)
// =============================================================================

extern "C" {
    pub fn vesta_fp_mul(a: *const u64, b: *const u64, r: *mut u64);
    pub fn vesta_fp_sqr(a: *const u64, r: *mut u64);
    pub fn vesta_fp_add(a: *const u64, b: *const u64, r: *mut u64);
    pub fn vesta_fp_sub(a: *const u64, b: *const u64, r: *mut u64);
    pub fn vesta_fp_neg(a: *const u64, r: *mut u64);
    pub fn vesta_point_add(p: *const u64, q: *const u64, r: *mut u64);
    pub fn vesta_point_double(p: *const u64, r: *mut u64);
    pub fn vesta_point_add_mixed(p: *const u64, q_aff: *const u64, r: *mut u64);
    pub fn vesta_scalar_mul(p: *const u64, scalar: *const u64, r: *mut u64);
    pub fn vesta_pippenger_msm(points: *const u64, scalars: *const u32, n: c_int, result: *mut u64);
}
